Cambiados los comandos a paradigma POO, controlador no alterado.